--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MCTTeacher</string>
+    <string name="menu_logout">Logout</string>
+    <string name="logout_msg">Do you really want to log out?</string>
 </resources>
